<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/setting"
        android:id="@+id/settingslayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <androidx.preference.Preference android:key="donate"
            android:title="@string/showfr"
            android:defaultValue="false"
            android:id="@+id/donate"
            android:enabled="true"/>
    <androidx.preference.ListPreference
            android:key="tabmode"
            android:dialogTitle=""
            android:title="@string/tabmode"
            android:entries="@array/switcharray"
            android:entryValues="@array/switchvalue"
            android:defaultValue="2"/>
    <androidx.preference.ListPreference
            android:key="lang"
            android:title="@string/lang"
            android:dialogTitle=""
            android:entries="@array/langswitch"
            android:entryValues="@array/langvalue"
    />
    
    <androidx.preference.CheckBoxPreference android:key="tracking"
            android:title="@string/tracking"
            android:defaultValue="true"/>

    <androidx.preference.CheckBoxPreference android:key="doubleb"
                        android:title="@string/doubleb"
                        android:defaultValue="true"/>
    <androidx.preference.CheckBoxPreference android:key="hidenavi"
                        android:title="@string/hidenavi"
                        android:defaultValue="false"
                       />
    <androidx.preference.CheckBoxPreference android:key="swiperefresh"
                        android:title="@string/swiperefresh"
                        android:defaultValue="false"
    />
    <androidx.preference.Preference android:key="clearco"
                android:title="@string/clearco"></androidx.preference.Preference>

    <androidx.preference.Preference android:key="cleard"
                android:title="@string/cleard"></androidx.preference.Preference>



    <androidx.preference.CheckBoxPreference android:key="rememposit"
                        android:title="@string/rememposit"
                        android:defaultValue="false"
                        android:enabled="false"
    />



</androidx.preference.PreferenceScreen>
