<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/fbsetting"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.preference.Preference android:key="fbthemes"
            android:title="@string/fbthemes"
            android:defaultValue="false"
            android:enabled="true"/>

  <!--><androidx.preference.ListPreference
            android:key="fbthemes"
            android:title="@string/fbthemes"
            android:entries="@array/fbThemeArray"
            android:entryValues="@array/fbThemeValues"
            android:defaultValue="1"
            android:dialogTitle=""/>-->

    <androidx.preference.CheckBoxPreference android:key="fbfast"
                        android:title="@string/fbfast"
                        android:defaultValue="false"/>
    <androidx.preference.CheckBoxPreference android:key="sponsored"
                        android:title="@string/sponsored"
                        android:defaultValue="false"
                        android:enabled="true"/>





</androidx.preference.PreferenceScreen>
